# ratatat

./: .gitignore
cinetrack/: Cargo.toml
cinetrack/src/: app.rs  main.rs  moviecall.rs  ui.rs
counter/: Cargo.toml
counter/src/: main.rs
hello-ratatui/src/: main.rs
