[package]
name = "cinetrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
futures = "0.3.30"
ratatui = "0.26.1"
reqwest = "0.11.26"
    tokio = { version = "1.36.0", features = ["full"]}
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.35"
serde = "1.0.197"
serde_json = "1.0.114"
time = "0.3.34"
